# OffroadWeakVLA

./: .gitignore
docs/: TerraGrip-VLA 架构与运行说明.md  后端代码详解.md
src/cav_bywire_lvtan/: CMakeLists.txt  package.xml
src/cav_bywire_lvtan/include/: dataModel.hpp  ros_cav.h
src/cav_bywire_lvtan/launch/: cav_bywire_lvtan.launch.py  driver_only.launch.py
src/cav_bywire_lvtan/src/: can_input.cpp  can_output.cpp  main.cpp  ros_cav.cpp  rtk_parse.cpp
src/cav_msgs/: CMakeLists.txt  package.xml
src/cav_msgs/msg/: Control.msg  PlanedPath.msg  VehicleState.msg
src/learning_preview_controller/: package.xml  setup.cfg  setup.py
src/learning_preview_controller/config/: mpc_params.yaml  preview_params.yaml  stanley_params.yaml
src/learning_preview_controller/launch/: controller_only.launch.py  driver_controller_no_socketcan.launch.py  realcar_all.launch.py  stanley_only.launch.py  stanley_realcar_all.launch.py
src/learning_preview_controller/learning_preview_controller/: __init__.py  compatibility.py  config.py  controller.py  controller_node.py  learning.py  output_recorder.py  path.py  path_helper.py  preview_lqr.py  preview_lqr0708.py  preview_lqrNo_Ey_I.py  realtime_plot.py  stanley_controller.py  start_stop_panel.py  utils.py  vehicle_model.py
src/learning_preview_controller/learning_preview_controller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/learning_preview_plot/: package.xml  setup.cfg  setup.py
src/learning_preview_plot/learning_preview_plot/: plot_node.py  realtime_plot.py
terragrip_vla/: .gitignore  README.md  constants.py  features.py  language.py  pytest.ini  requirements.txt  runtime.py
terragrip_vla/configs/: default.yaml  mode_e2e.yaml  mode_hybrid.yaml  mode_modular.yaml  small.yaml
terragrip_vla/conformal/: aps.py  select.py  split_conformal.py
terragrip_vla/data/: dataset.py  labels.py  mock_generator.py  schema.py
terragrip_vla/eval/: baselines.py  compare.py  metrics.py  plotting.py  policies.py  run_eval.py
terragrip_vla/eval/analysis/: intervention.py  leakage.py  probe.py
terragrip_vla/models/: gear_head.py  model.py  perception.py  slip_head.py
terragrip_vla/scripts/: env_check.py  verify_framework.py
terragrip_vla/scripts/docker/: Dockerfile
terragrip_vla/tests/: conftest.py  test_conformal_coverage.py  test_language.py  test_mock_pipeline.py  test_modes.py  test_selection.py  test_shapes.py
terragrip_vla/training/: losses.py  train.py  trainer.py
