<?xml version="1.0"?>
<package format="3">
  <name>learning_preview_controller</name>
  <version>0.0.1</version>
  <description>ROS2 wrapper for the learning preview controller.</description>
  <maintainer email="yuheng@example.com">yuheng</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>cav_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
