<?xml version="1.0"?>
<package format="3">
  <name>learning_preview_plot</name>
  <version>0.0.1</version>
  <description>Independent plot node for learning_preview_controller</description>
  <maintainer email="yuheng@example.com">yuheng</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>learning_preview_controller</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
